scss/_styleguide-base.scss
// Preview box (e.g. used by header and footer documentation) -------- //
.preview {
  margin-bottom: 2em;
  background-color: $color-white;
  padding: $site-margins;
  border: $outer-border; // scss-lint:disable ColorVariable

  .background-dark {
    padding-left: 1em;
    padding-right: 1em;
    display: inline-block;
  }

  > *:first-child {
    margin-top: 0;
  }
}

// Icon examples --------------

.icon-box {
  width: 100%;
  height: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.icon-box .icon-svg {
  margin-bottom: 5px;
  height:4.4rem;
  width:4.4rem;
}

.icon-box .icon-name {
  white-space: nowrap;
  font-size:1.3rem;
}

// Typography --------------
.demo-typesetting{
  border-top: 2px solid $color-data-violet;
  color: $color-data-violet;
  padding-top: 1rem;
  text-align: center;
}

// CookiePrompter -------------- //
#eksCookiePrompt{
  background-color: $background-normal;
  border-top: $outer-border;
  color: $color-black;
  padding-top: map-get($spacers, 6);
  padding-bottom: map-get($spacers, 6);
  position: fixed;
  bottom: 0px;
  right: 0px;
  left: 0px;
  z-index: 9500;
  p{

  }
}

// Colors -------------- //

// Base colors
.color-white {
  background-color: $color-white;
}

.color-base {
  background-color: $color-black;
}

// Gray-scales

.color-gray-dark {
  background-color: $color-gray-medium-dark;
}
.color-gray {
  background-color: $color-gray-medium-dark;
}
.color-gray-light {
  background-color: $color-gray-medium-light;
}
.color-gray-lighter {
  background-color: $color-gray-medium-light;
}
.color-gray-lightest {
  background-color: $color-gray-medium-light;
}
.color-gray-brightest {
  background-color: $color-gray-medium-dark;
}

// Text color
.color-text {
  background-color: $color-text;
}
.color-text-secondary {
  background-color: $color-text-secondary;
}
.color-text-bright {
  background-color: $color-text-bright;
}

// Links color
.color-link {
  background-color: $color-link;
}
.color-link-hover {
  background-color: $color-link-hover;
}
.color-focus {
  background-color: $color-focus;
}
.color-visited {
  background-color: $color-link-visited;
}

// Neutral color
.color-neutral {
  background-color: $color-neutral;
}
.color-neutral-darker {
  background-color: $color-neutral-darker;
}
.color-neutral-darkest {
  background-color: $color-neutral-darkest;
}
.color-neutral {
  background-color: $color-neutral-lightest;
}

// Functional theme colors
.color-primary {
  background-color: $color-primary;
}
.color-primary-darker {
  background-color: $color-primary-darker;
}
.color-primary-darkest {
  background-color: $color-primary-darkest;
}
.color-primary-lightest {
  background-color: $color-primary-lightest;
}
.color-background {
  background-color: $color-background;
}

.color-text-positive {
  background-color: $color-text-positive;
}
.color-text-negative {
  background-color: $color-text-negative;
}

// Colors used for alert boxes
.color-error {
  background-color: $color-error;
}
.color-success {
  background-color: $color-success;
}
.color-warning {
  background-color: $color-warning;
}

.color-info {
  background-color: $color-info;
}

.color-error-background {
  background-color: $color-error-light;
}
.color-success-background {
  background-color: $color-success-light;
}
.color-warning-background {
  background-color: $color-warning-light;
}
.color-info-background {
  background-color: $color-info-light;
}

// Header, fotter & navigation colors
.color-header-background {
  background-color: $color-header-background;
}
.color-footer-background {
  background-color: $color-footer-background;
}
.color-topmenu-background {
  background-color: $color-topmenu-background;
}
.color-page {
  background-color: $color-page;
}

// Colors for borders
.color-border {
  background-color: $color-border;
}
.color-border-light {
  background-color: $color-border-light;
}
.color-border-bright {
  background-color: $color-border-bright;
}
.color-border-focus {
  background-color: $color-border-focus;
}

// Special colors
.color-alt-background {
  background-color: $color-alt-background;
}
.color-alt-background-hover {
  background-color: $color-alt-background-hover;
}
.color-alt-table-header {
  background-color: $color-alt-table-header;
}
.color-required {
  background-color: $color-required;
}
.color-shadow {
  background-color: $color-shadow;
}
.color-transparent {
  background-color: $color-transparent;
}
/* ... */

